# mauzi

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
dicti_macros/: Cargo.toml
dicti_macros/src/: ast.rs  gen.rs  lib.rs  parse.rs
dicti_runtime/: Cargo.toml
examples/: full.rs  simple.rs
examples/modules/: Cargo.toml
examples/modules/src/: dict.rs  foo.mauzi.rs  main.rs
examples/modules/src/bar/: baz.mauzi.rs  mod.mauzi.rs
mauzi_macros/: Cargo.toml
mauzi_macros/src/: ast.rs  check.rs  gen.rs  lib.rs  parse.rs  util.rs
mauzi_runtime/: Cargo.toml
mauzi_runtime/src/: lib.rs
src/: lib.rs  makro.rs
