[package]
name = "mauzi"
version = "0.0.2"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

description = "Experimental i18n library using proc-macros"
documentation = "https://docs.rs/mauzi/"
repository = "https://github.com/LukasKalbertodt/mauzi"
readme = "README.md"
license = "MIT/Apache-2.0"

[workspace]
members = ["mauzi_macros"]

[dependencies]
mauzi_macros = { version = "0.0.2", path = "mauzi_macros/" }
