[package]
name = "dicti_macros"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]


[lib]
name = "dicti_macros"
proc-macro = true

[dependencies]
literalext = { version = "0.1", default-features = false, features = ["proc-macro"] }
proc-macro2 = { version = "0.1", features = ["unstable"] }
quote = "0.3"
