[package]
name = "mauzi_macros"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]


[lib]
name = "mauzi_macros"
proc-macro = true

[dependencies]
literalext = { version = "0.1", default-features = false, features = ["proc-macro"] }
mauzi_runtime = { path = "../mauzi_runtime" }
